--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,7 +4,7 @@ server {
     root /usr/share/nginx/html;
 
     location / {
-        try_files $uri $uri/ /usr/share/nginx/html/NMBS/index-new.html;
+        try_files $uri $uri/ /usr/share/nginx/html/NMBS/NMBS;
     }	
 	    # Additional configurations (if needed)
 	    # ...
