--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./conf:/etc/nginx/conf.d/default.conf
+      - ./conf:/etc/nginx/conf.d:ro
       - ./src:/var/www/html
     depends_on:
       - php
