--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /var/www/html;
-    index index.php index.html;
+    index mynmbs.php nl.html;
 
     location / {
         try_files $uri $uri/ =404;
