altered config file for index file

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /var/www/html;
-    index mynmbs.php nl.html;
+    index nl.html mynmbs.php;
 
     location / {
         try_files $uri $uri/ =404;
