--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,8 @@ services:
       context: ./php
     volumes:
       - ./src:/var/www/html
+    depends_on:
+      - mysql
 
   mysql:
     image: mysql:5.7
@@ -23,7 +25,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: mydb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: pass
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
     ports:
       - "3306:3306"
