--- a/compose.yml
+++ b/compose.yml
@@ -29,3 +29,6 @@ services:
       MYSQL_PASSWORD: admin
     ports:
       - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+      - ./src/fake-NMBS/mysql-init:/docker-entrypoint-initdb.d:ro
